fixed alert covering title

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -35,3 +35,7 @@ a:hover {
   top: 0px;
   width: 100%;
 }
+
+#main {
+  margin-top: 50px;
+}
